<resources>
    <string name="app_name">UHelper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="carrera">Carrera</string>
    <string name="semestre">Semestre</string>
    <string name="empezar">Empezar</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="email">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="cargando">Cargando</string>
    <string name="continuar">Desliza</string>
    <string name="tab_text_1">Chats</string>
    <string name="tab_text_2">Asignaturas</string>
    <string name="txt_nueva_tutoria">Nueva Tutoria</string>
    <string name="txt_nombre_asignatura">Nombre de la asignatura</string>
    <string name="txt_telefono_contacto">Telefono de contacto</string>
    <string name="txt_horarios">Horarios</string>
    <string name="txt_publicar_tutoria">Publicar tutoria</string>
    <string name="text_fiel_password_vacio">Ingrese la contraseña</string>
    <string name="email_invalido">Email invalido</string>
    <string name="registrarse">Registrarse</string>
    <string name="todo">TODO</string>
    <string name="txt_tutorias">Tutorias</string>
    <string name="txt_configuraciones">Configuraciones</string>
    <string name="txt_menu_principal">Menú principal</string>
    <string name="txt_notificaciones">Notificaciones</string>
    <string name="txt_recordatorios">Recordatorios</string>
    <string name="creditos">Creditos:</string>
    <string name="input_registro_nombres">Ingrese su nombre</string>
    <string name="input_registro_apellidos">Ingrese sus apellidos</string>
    <string name="email_input">Email</string>
    <string name="input_password">La constraseña debe tener minimo 6 caracteres</string>
    <string name="input_password_confirmacion">Las contraseña no coinciden</string>
    <string name="confirmar_contrasenia">Confirmar contraseña</string>
    <string name="proximamente">Proximamente</string>
    <string name="txtNombreTutor">Nombre del Tutor</string>
    <string name="txtHorarios">Horarios:</string>
    <string name="btnSolicitarClase">Solicitar</string>
    <string name="txtNombreClase">Nombre</string>
    <string name="tutores">Tutores</string>

</resources>
