<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notificationes"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/txt_notificaciones" />
        <item
            android:id="@+id/nav_recordatorios"
            android:icon="@drawable/ic_access_alarm_black_24dp"
            android:title="@string/txt_recordatorios" />
        <item
            android:id="@+id/nav_tutorias"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/txt_tutorias" />
        <item
            android:id="@+id/nav_configuraciones"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/txt_configuraciones" />
    </group>
</menu>
